--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+      <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Normalize -->
+    <link href="
+    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+    " rel="stylesheet">
     <title>Web-studio</title>
   </head>
   <body>
@@ -155,10 +161,14 @@
     </main>
 <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web<span class="web-footer">Studio</span></a>
-      <p class="footer-text"> Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <div class="container"><a class="footer-text-logo link logo" href="./index.html" class="logo link"
+    >Web<span class="web-footer">Studio</span></a
+    >
+   <p class="footer-text">
+    Increase the flow of customers and sales for your business with digital
+    marketing & growth solutions.
+    </p>
+  </div>
+  </footer>
   </body>
 </html>
