--- a/portfolio.html
+++ b/portfolio.html
@@ -5,19 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+      <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize -->
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
+"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <body>
-      <!-- Header -->
+    <!-- Header -->
     <header class="header">
       <nav>
-         <!-- Logo -->
+        <!-- Logo -->
         <a class="logo link" href="./index.html">
           Web<span class="web">Studio</span>
         </a>
@@ -48,7 +56,7 @@
         </ul>
       </address>
     </header>
-<!-- Main -->
+    <!-- Main -->
     <main>
       <section>
         <h1 class="hide-gallery">Gallery</h1>
@@ -178,11 +186,16 @@
         </ul>
       </section>
     </main>
-<!-- Footer -->
+    <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web<span class="web-footer">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.</p>
+      <div class="container"><a class="footer-text-logo link logo" href="./index.html" class="logo link"
+        >Web<span class="web-footer">Studio</span></a
+      >
+      <p class="footer-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </div>
     </footer>
   </body>
 </html>
