--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <body>
   <!-- Header -->
     <header class="header">
-      <nav>
-        <!-- Logo -->
-        <a class="logo link" href="./index.html">
+      <div class="header-container container">    
+        <nav class="nav-container">
+          <a class="logo link" href="./index.html">
           Web<span class="web">Studio</span>
         </a>
         <ul class="list">
@@ -54,6 +54,8 @@
           </li>
         </ul>
       </address>
+    </div>
+  
     </header>
     <!-- Main -->
     <main>
