--- a/portfolio.html
+++ b/portfolio.html
@@ -13,20 +13,17 @@
       rel="stylesheet"
     />
     <!-- Normalize -->
-    <link
-      href="
-https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
-"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" 
+    rel="stylesheet">
+    
     <title>Portfolio</title>
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <nav>
-        <!-- Logo -->
-        <a class="logo link" href="./index.html">
+      <div class="header-container container">    
+        <nav class="nav-container">
+          <a class="logo link" href="./index.html">
           Web<span class="web">Studio</span>
         </a>
         <ul class="list">
@@ -55,6 +52,7 @@ https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
           </li>
         </ul>
       </address>
+    </div>
     </header>
     <!-- Main -->
     <main>
