--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     />
 
     <!-- Normalize -->
-    <link href="
-    https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css
-    " rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" 
+    rel="stylesheet">
+
     <title>Web-studio</title>
   </head>
   <body>
