--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
     <!-- Normalize -->
     <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" 
     rel="stylesheet">
-    
+
     <title>Portfolio</title>
   </head>
   <body>
@@ -73,7 +73,7 @@
           <!-- Portfolio elements -->
         </ul>
         <ul class="list">
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/bankapp.jpg"
@@ -85,7 +85,7 @@
               <p class="gallery-paragraph">App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/cashless.jpg"
@@ -97,7 +97,7 @@
               <p class="gallery-paragraph">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/maditation.jpg"
@@ -109,7 +109,7 @@
               <p class="gallery-paragraph">App</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/taxi.jpg"
@@ -121,7 +121,7 @@
               <p class="gallery-paragraph">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/Screen.jpg"
@@ -133,7 +133,7 @@
               <p class="gallery-paragraph">Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/onlinecourses.jpg"
@@ -145,7 +145,7 @@
               <p class="gallery-paragraph">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/instagram.jpg"
@@ -157,7 +157,7 @@
               <p class="gallery-paragraph">Design</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/organic.jpg"
@@ -169,7 +169,7 @@
               <p class="gallery-paragraph">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="portfolio-card">
             <a href="#" class="link">
               <img
                 src="./images/portfoliopic/freshcoffee.jpg"
