--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
           </li>
           <!-- Portfolio elements -->
         </ul>
-        <ul class="list">
+        <ul class="portfolio-list">
           <li class="portfolio-card">
             <a href="#" class="link">
               <img
@@ -81,8 +81,10 @@
                 height="300"
                 alt="i1"
               />
-              <h2 class="gallery-header">Banking App Interface Concept</h2>
-              <p class="gallery-paragraph">App</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Banking App Interface Concept</h2>
+                <p class="gallery-paragraph">App</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -93,8 +95,10 @@
                 height="300"
                 alt="i2"
               />
-              <h2 class="gallery-header">Cashless Payment</h2>
-              <p class="gallery-paragraph">Marketing</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Cashless Payment</h2>
+                <p class="gallery-paragraph">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -105,8 +109,10 @@
                 height="300"
                 alt="i3"
               />
-              <h2 class="gallery-header">Meditation App</h2>
-              <p class="gallery-paragraph">App</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Meditation App</h2>
+                <p class="gallery-paragraph">App</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -117,8 +123,10 @@
                 height="300"
                 alt="i4"
               />
-              <h2 class="gallery-header">Taxi Service</h2>
-              <p class="gallery-paragraph">Marketing</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Taxi Service</h2>
+                <p class="gallery-paragraph">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -129,8 +137,10 @@
                 height="300"
                 alt="i5"
               />
-              <h2 class="gallery-header">Screen Illustrations</h2>
-              <p class="gallery-paragraph">Design</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Screen Illustrations</h2>
+                <p class="gallery-paragraph">Design</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -141,8 +151,10 @@
                 height="300"
                 alt="i6"
               />
-              <h2 class="gallery-header">Online Courses</h2>
-              <p class="gallery-paragraph">Marketing</p>
+              <div class="portfolio-desc" >
+                <h2 class="gallery-header">Online Courses</h2>
+                <p class="gallery-paragraph">Marketing</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -153,8 +165,10 @@
                 height="300"
                 alt="i7"
               />
-              <h2 class="gallery-header">Instagram Stories Concept</h2>
-              <p class="gallery-paragraph">Design</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Instagram Stories Concept</h2>
+                <p class="gallery-paragraph">Design</p>
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -165,8 +179,10 @@
                 height="300"
                 alt="i8"
               />
-              <h2 class="gallery-header">Organic Food</h2>
-              <p class="gallery-paragraph">Web Site</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Organic Food</h2>
+                <p class="gallery-paragraph">Web Site</p>
+              </div> 
             </a>
           </li>
           <li class="portfolio-card">
@@ -177,8 +193,10 @@
                 height="300"
                 alt="i9"
               />
-              <h2 class="gallery-header">Fresh Coffee</h2>
-              <p class="gallery-paragraph">Web Site</p>
+              <div class="portfolio-desc">
+                <h2 class="gallery-header">Fresh Coffee</h2>
+                <p class="gallery-paragraph">Web Site</p>
+              </div>
             </a>
           </li>
         </ul>
