--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
           </li>
           <!-- Portfolio elements -->
         </ul>
-        <ul class="list portfolio-list">
+        <ul class="portfolio-list list">
           <li class="portfolio-card">
             <a href="#" class="link">
               <img
