--- a/index.html
+++ b/index.html
@@ -56,48 +56,54 @@
     </div>
   
     </header>
+
     <!-- Main -->
     <main>
-       <!-- Section solution -->
-      <section class="section-solutions">
-        <h1 class="h-solutions">Effective Solutions for Your Business</h1>
-        <button type="button" class="solution-button">Order Service</button>
+       <!-- Hero section -->
+       <section class="hero-section">
+        <div class="hero-container container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="order-button">Order Service</button>
+        </div>
       </section>
+
       <!-- Advantages Section -->
-      <section>
-        <section class="advantages">
-          <h2 class="advantages-title" hidden>Our Advantages</h2>
-          <ul class="list">
-            <li>
-            <h3 class="advantages-caption">Strategy</h3>
-            <p class="advantages-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-caption">Punctuality</h3>
-            <p class="advantages-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-caption">Diligence</h3>
-            <p class="advantages-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="advantages-caption">Technologies</h3>
-            <p class="advantages-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="advantages-section">
+        <div class="container">
+          <h2 class="secondary-title visually-hidden">Our preferences</h2>
+          <ul class="advantages-list-container list">
+            <li class="advantages-item-container">
+              <h3 class="sub-title">Strategy</h3>
+              <p class="advantages-desc"
+                >Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li class="advantages-item-container">
+              <h3 class="sub-title">Punctuality</h3>
+              <p class="advantages-desc"
+                >Bring the key message to the brand's audience for the best price within the
+                shortest possible time.</p
+              >
+            </li>
+            <li class="advantages-item-container">
+              <h3 class="sub-title">Diligence</h3>
+              <p class="advantages-desc"
+                >Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.</p
+              >
+            </li>
+            <li class="advantages-item-container">
+              <h3 class="sub-title">Technologies</h3>
+              <p class="advantages-desc"
+                >Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.</p
+              >
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!-- Work Section -->
       <section class="work">
         <h2 class="work-title">What are we doing</h2>
@@ -117,6 +123,7 @@
           </li>
         </ul>
       </section>
+
       <!-- Team Section -->
       <section class="team">
         <h2 class="team-title">Our Team</h2>
