--- a/index.html
+++ b/index.html
@@ -105,23 +105,33 @@
       </section>
 
       <!-- Work Section -->
-      <section class="work">
-        <h2 class="work-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/what-we-do/wp-1.jpg" alt="website" width="360" />
+      <section class="work-section section">
+        <div class="container">
+          <h2 class="work-title">What are we doing</h2>
+        <ul class="work-list-container list">
+          <li class="work-item-container">
+            <img class="work-img" 
+            src="./images/what-we-do/wp-1.jpg" 
+            alt="website" 
+            width="360" 
+            />
+          </li>
+          <li class="work-item-container">
+            <img class="work-img" 
+            src="./images/what-we-do/wp-2.jpg" 
+            alt="desing" 
+            width="360" 
+            />
           </li>
           <li>
-            <img src="./images/what-we-do/wp-2.jpg" alt="desing" width="360" />
-          </li>
-          <li>
-            <img
+            <img class="work-img"
               src="./images/what-we-do/wp-3.jpg"
               alt="application"
               width="360"
             />
           </li>
         </ul>
+        </div>
       </section>
 
       <!-- Team Section -->
