--- a/index.html
+++ b/index.html
@@ -136,45 +136,53 @@
 
       <!-- Team Section -->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="list">
-          <li class="our-team-list-item">
-            <img
-              src="./images/employees/Mark-Guerrero.jpg"
-              alt="teamcard1"
-              width="264"
-            />
-            <h3 class="advantages-caption">Mark Guerrero</h3>
-            <p class="advantages-text">Product Designer</p>
-          </li>
-          <li class="our-team-list-item">
-            <img
-              src="./images/employees/Tom-Ford.jpg"
-              alt="teamcard2"
-              width="264"
-            />
-            <h3 class="advantages-caption">Tom Ford</h3>
-            <p class="advantages-text">Frontend Developer</p>
-          </li>
-          <li class="our-team-list-item">
-            <img
-              src="./images/employees/Camila-Garcia.jpg"
-              alt="teamcard3"
-              width="264"
-            />
-            <h3 class="advantages-caption">Camila Garcia</h3>
-            <p class="advantages-text">Marketing</p>
-          </li>
-          <li class="our-team-list-item">
-            <img
-              src="./images/employees/Daniel-Wilson.jpg"
-              alt="teamcard4"
-              width="264"
-            />
-            <h3 class="advantages-caption">Daniel Wilson</h3>
-            <p class="advantages-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="list">
+            <li class="our-team-list-item">
+              <img
+                src="./images/employees/Mark-Guerrero.jpg"
+                alt="teamcard1"
+                width="264"
+              />
+              <h3 class="advantages-caption">Mark Guerrero</h3>
+              <p class="advantages-text">Product Designer</p>
+            </li>
+            <li class="our-team-list-item">
+              <img
+                src="./images/employees/Tom-Ford.jpg"
+                alt="teamcard2"
+                width="264"
+              />
+              <div class="team-card-thumb">
+                <h3 class="advantages-caption">Tom Ford</h3>
+                <p class="advantages-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="our-team-list-item">
+              <img
+                src="./images/employees/Camila-Garcia.jpg"
+                alt="teamcard3"
+                width="264"
+              />
+              <div class="team-card-thumb">
+                <h3 class="advantages-caption">Camila Garcia</h3>
+                <p class="advantages-text">Marketing</p>
+              </div>
+            </li>
+            <li class="our-team-list-item">
+              <img
+                src="./images/employees/Daniel-Wilson.jpg"
+                alt="teamcard4"
+                width="264"
+              />
+              <div class="team-card-thumb">
+                <h3 class="advantages-caption">Daniel Wilson</h3>
+                <p class="advantages-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 <!-- Footer -->
