--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,12 @@
       </address>
     </div>
     </header>
+
     <!-- Main -->
     <main>
       <section>
         <h1 class="hide-gallery">Gallery</h1>
-        <ul class="list">
+        <ul class="list filters-list">
           <li><button class="button-portfolio" type="button">All</button></li>
           <li>
             <button class="button-portfolio" type="button">Web Site</button>
@@ -70,6 +71,7 @@
           <li>
             <button class="button-portfolio" type="button">Marketing</button>
           </li>
+
           <!-- Portfolio elements -->
         </ul>
         <ul class="portfolio-list list">
@@ -202,6 +204,7 @@
         </ul>
       </section>
     </main>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container"><a class="footer-text-logo link logo" href="./index.html" class="logo link"
