--- a/portfolio.html
+++ b/portfolio.html
@@ -19,40 +19,41 @@
     <title>Portfolio</title>
   </head>
   <body>
+    
     <!-- Header -->
     <header class="header">
-      <div class="header-container container">    
+      <div class="header-container container">
         <nav class="nav-container">
           <a class="logo link" href="./index.html">
-          Web<span class="web">Studio</span>
-        </a>
-        <ul class="list">
-          <li>
-            <a class="header-nav-link link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="header-nav-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a class="header-nav-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a class="contact link" href="info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </div>
+            Web<span class="web">Studio</span>
+          </a>
+          <ul class="list nav-list">
+            <li>
+              <a class="header-nav-link link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="header-nav-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li><a class="header-nav-link link" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list list-contacts">
+            <li>
+              <a class="contact link" href="info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <!-- Main -->
