--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <title>Portfolio</title>
   </head>
   <body>
-    
+
     <!-- Header -->
     <header class="header">
       <div class="header-container container">
@@ -207,15 +207,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="container"><a class="footer-text-logo link logo" href="./index.html" class="logo link"
-        >Web<span class="web-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+   <footer class="footer">
+      <div class="container">
+        <a class="link logo" href="./index.html" class="logo link">
+          Web<span class="web-footer">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
