--- a/portfolio.html
+++ b/portfolio.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
 
     <!-- Normalize -->
-    <link href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css" 
-    rel="stylesheet">
-    
-      <!-- Fonts -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    
 
     <title>Portfolio</title>
   </head>
   <body>
-
     <!-- Header -->
     <header class="header">
       <div class="header-container container">
@@ -157,7 +157,7 @@
                 height="300"
                 alt="i6"
               />
-              <div class="portfolio-desc" >
+              <div class="portfolio-desc">
                 <h2 class="gallery-header">Online Courses</h2>
                 <p class="gallery-paragraph">Marketing</p>
               </div>
@@ -188,7 +188,7 @@
               <div class="portfolio-desc">
                 <h2 class="gallery-header">Organic Food</h2>
                 <p class="gallery-paragraph">Web Site</p>
-              </div> 
+              </div>
             </a>
           </li>
           <li class="portfolio-card">
@@ -210,9 +210,9 @@
     </main>
 
     <!-- Footer -->
-   <footer class="footer">
+    <footer class="footer">
       <div class="container">
-        <a class="link logo" href="./index.html" class="logo link">
+        <a class="link logo" href="./index.html">
           Web<span class="web-footer">Studio</span>
         </a>
         <p class="footer-text">
