--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="link logo" href="./index.html" class="logo link">
+        <a class="link logo" href="./index.html">
           Web<span class="web-footer">Studio</span>
         </a>
         <p class="footer-text">
