--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 width="360"
               />
             </li>
-            <li>
+            <li class="work-item-container"s>
               <img
                 class="work-img"
                 src="./images/what-we-do/wp-3.jpg"
