--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                 src="./images/employees/Mark-Guerrero.jpg"
                 alt="teamcard1"
                 width="264"
+                class="team-image"
               />
               <div class="team-card-thumb">
                 <h3 class="advantages-caption">Mark Guerrero</h3>
@@ -161,6 +162,7 @@
                 src="./images/employees/Tom-Ford.jpg"
                 alt="teamcard2"
                 width="264"
+                class="team-image"
               />
               <div class="team-card-thumb">
                 <h3 class="advantages-caption">Tom Ford</h3>
@@ -172,6 +174,7 @@
                 src="./images/employees/Camila-Garcia.jpg"
                 alt="teamcard3"
                 width="264"
+                class="team-image"
               />
               <div class="team-card-thumb">
                 <h3 class="advantages-caption">Camila Garcia</h3>
@@ -183,6 +186,7 @@
                 src="./images/employees/Daniel-Wilson.jpg"
                 alt="teamcard4"
                 width="264"
+                class="team-image"
               />
               <div class="team-card-thumb">
                 <h3 class="advantages-caption">Daniel Wilson</h3>
