--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 width="360"
               />
             </li>
-            <li class="work-item-container"s>
+            <li class="work-item-container" s>
               <img
                 class="work-img"
                 src="./images/what-we-do/wp-3.jpg"
@@ -201,7 +201,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="link logo" href="./index.html">
+        <a class="link logo footer-link" href="./index.html">
           Web<span class="web-footer">Studio</span>
         </a>
         <p class="footer-text">
