--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
     <!-- Main -->
     <main>
-      <section>
+      <section class="filters-section">
         <h1 class="hide-gallery">Gallery</h1>
         <ul class="list filters-list">
           <li><button class="button-portfolio" type="button">All</button></li>
@@ -75,9 +75,10 @@
           <li>
             <button class="button-portfolio" type="button">Marketing</button>
           </li>
-
-          <!-- Portfolio elements -->
         </ul>
+        <!-- Portfolio elements -->
+      </section>
+      <section class="portfolio-section">
         <ul class="portfolio-list list">
           <li class="portfolio-card">
             <a href="#" class="link">
