fix portfolio main

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,20 +62,22 @@
     <!-- Main -->
     <main>
       <section class="filters-section">
-        <h1 class="hide-gallery">Gallery</h1>
-        <ul class="list filters-list">
-          <li><button class="button-portfolio" type="button">All</button></li>
-          <li>
-            <button class="button-portfolio" type="button">Web Site</button>
-          </li>
-          <li><button class="button-portfolio" type="button">App</button></li>
-          <li>
-            <button class="button-portfolio" type="button">Design</button>
-          </li>
-          <li>
-            <button class="button-portfolio" type="button">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="hide-gallery">Gallery</h1>
+          <ul class="list filters-list">
+            <li><button class="button-portfolio" type="button">All</button></li>
+            <li>
+              <button class="button-portfolio" type="button">Web Site</button>
+            </li>
+            <li><button class="button-portfolio" type="button">App</button></li>
+            <li>
+              <button class="button-portfolio" type="button">Design</button>
+            </li>
+            <li>
+              <button class="button-portfolio" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
         <!-- Portfolio elements -->
       </section>
       <section class="portfolio-section">
